# se-toolkit-lab-8

./: Dockerfile  REPORT.md  docker-compose.yml  docker-compose.yml.save  entrypoint.py  pyproject.toml
backend/app/: main.py
backend/app/db/: items.py
backend/src/lms_backend/routers/: items.py
caddy/: Caddyfile
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  observability.py  server.py  settings.py  tools.py
nanobot/: Dockerfile  entrypoint.py  pyproject.toml
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
